# InsightBoardReporting

./: .gitignore  README.md  index.html  main.py  pyproject.toml  requirements.txt
DRC-mpox-reporting/modules/: plot_creator.py  report_generator.py
config/: config-v2.yaml  config.yaml  config_v2.yaml
data/drc-aires-sante/: RDC_Aires de sant‚.sbn
data/test_data/: generate_data.py  test_data.csv
example_input/: generate_data.py  linelist.csv
example_input/country-boundary/: geoBoundaries-COD-ADM1-all.dissolved.shp  geoBoundaries-COD-ADM1-all.dissolved.shx
example_input/geoBoundaries-COD-ADM1-all/: province_lookup.csv
example_input/rdc_aires-de-sante/: RDC_Aires de santé.sbx  aires_lookup.csv
example_input/rdc_zones-de-sante/: RDC_Zones de sant‚.shp.xml  source.rtf  zones_lookup.csv
example_output/: report.html
modules/: config_loader.py  data_processor.py  plot_creator.py  report_generator.py
output/: report.html
plots/age_sex_pyramid_plot/: plot.py  preprocess.py
plots/multi_province_age_sex_pyramid_plot/: plot.py  preprocess.py
plots/multi_province_time_series_barplot/: plot.py  preprocess.py
plots/multi_week_province_map/: plot.py  preprocess.py
plots/multi_week_zone_sante_map/: plot.py  preprocess.py
plots/province_map/: plot.py  preprocess.py
plots/time_series_barplot/: plot.py  preprocess.py
plots/zone_sante_map/: plot.py  preprocess.py
src/: main.py
src/InsightBoardReporting.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/modules/: config_loader.py  (+3 more)
templates/: report_template.html
(+42 files in other folders)
