[project]
name = "InsightBoardReporting"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "geopandas>=0.12.2",
    "jinja2>=3.1.2",
    "matplotlib>=3.7.3",
    "numpy>=1.24.0",
    "pandas>=2.1.1",
    "plotly>=5.15.0",
    "pyyaml>=6.0",
    "kaleido>=0.2.1",
]

[project.scripts]
InsightBoardReporting = "main:cli"

[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8", "wheel"]
build-backend = "setuptools.build_meta"
